<?xml version="1.0" encoding="utf-8"?>
  <RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <fragment
      android:id="@+id/map_fragment"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
       class="com.google.android.gms.maps.SupportMapFragment"/>
    <LinearLayout
        android:id="@+id/sidebar"
      android:layout_gravity="top"
      android:background="#A000"
      android:orientation="vertical"
      android:layout_height="fill_parent"
      android:layout_width="150dp"
      android:weightSum="10">
      <TextView
        android:id="@+id/vehicle_name"
        style="@style/VehicleProps"
        android:text="@string/label_vehicle"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="top"
          android:orientation="horizontal"
          android:weightSum="5" >

	      <TextView
	        android:id="@+id/label_vehicle_speed"
	        style="@style/VehicleProps"
	        android:text="@string/label_vehicle_speed"/>
	      <TextView
	        android:id="@+id/vehicle_speed"
	        style="@style/VehicleProps"
	        android:text="@string/label_speed"/>

      </LinearLayout>
      
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="top"
          android:orientation="horizontal"
          android:weightSum="5" >

	      <TextView
	        android:id="@+id/label_vehicle_height"
	        style="@style/VehicleProps"
	        android:text="@string/label_vehicle_height"/>

	      <TextView
	          android:id="@+id/vehicle_height"
	          style="@style/VehicleProps"
	          android:text="@string/label_altitude" />
	      
      </LinearLayout>
      
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="top"
        android:text="" />
      
      <Button
          android:id="@+id/callOuts"
          style="@style/Button"
          android:text="@string/callOuts"
          android:onClick="startCallOut" />

    </LinearLayout>
  </RelativeLayout>
