<?xml version="1.0" encoding="utf-8"?>

  <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <fragment
      android:id="@+id/map"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
       class="com.google.android.gms.maps.SupportMapFragment"/>
    <LinearLayout
       android:layout_width="match_parent"
   	    android:layout_height="50dp"
   	    android:layout_gravity="bottom|right"
   	    android:background="#8d000000"
   	    android:orientation="horizontal">
      <Button
        android:id="@+id/vr_normal_button"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="setNoPadding"
        android:text="@string/label_vehicle"/>
      <Button
        android:id="@+id/vr_more_padded_button"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="setMorePadding"
        android:text="@string/label_speed"/>
      <Button
        android:id="@+id/vr_soh_button"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="moveToOperaHouse"
        android:text="@string/label_altitude"/>
    </LinearLayout>
  </RelativeLayout>
